--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -50,38 +50,38 @@ nav, p, section, article {
 
 div.hero {
 	position: relative;
+}
 
-	img {
-		display: block;
-   	 	width: 100%;
-    	height: auto;
-	}
+div.hero img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
 
-	h1 {
-		position: absolute;
-		top: 20px;
-		width: 100%;
-		padding: 16px;
-		text-align: center;
-		opacity: 0.95;
-		background-color: var(--accent1-color);
-		color: #fff; /* white text - make sure there is enough contrast with the background-color */
-	}
+div.hero h1 {
+	position: absolute;
+	top: 20px;
+	width: 100%;
+	padding: 18px;
+	text-align: center;
+	opacity: 0.95;
+	background-color: var(--accent1-color);
+	color: #fff;
+}
 
-	article {
-		position: absolute;
-		bottom: 30px;
-		background-color: var(--secondary-color);
-		font-size: 20px;
-		border: 1px solid var(--accent2-color);
-		border-radius: 5px;
-		box-shadow: 5px 5px 10px var(--accent2-color);
-	}
+div.hero article {
+	position: absolute;
+	bottom: 30px;
+	background-color: var(--secondary-color);
+	font-size: 20px;
+	border: 1px solid var(--accent2-color);
+	border-radius: 5px;
+	box-shadow: 5px 5px 10px var(--accent2-color);
+}
 
-	article img {
-		float: right;
-		width: 150px;
-	}
+div.hero article img {
+	float: right;
+	width: 150px;
 }
 
 header img {
