--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -77,6 +77,50 @@ header nav a {
 	text-decoration: none;
 }
 
+h1 {
+	/* margin: 0px 0; */
+	width: 100%;
+	padding: 18px;
+	text-align: center;
+	opacity: 0.95;
+	background-color: var(--accent1-color);
+	color: #fff;
+}
+
+div.contact-info {
+	display: flex;
+	justify-content: center;
+}
+
+div.contact-info div {
+	width: 600px;
+}
+
+div.employee-quotes {
+	
+}
+
+form.message-form * {
+	padding: 5px;
+}
+
+form.message-form input {
+	display: block;
+}
+
+form.message-form div {
+	display: flex;
+	align-items: center;
+}
+
+form.message-form div span label {
+	display: inline;
+}
+
+form.message-form div span input {
+	display: inline;
+}
+
 div.hero {
 	position: relative;
 }
@@ -90,12 +134,6 @@ div.hero img {
 div.hero h1 {
 	position: absolute;
 	top: 20px;
-	width: 100%;
-	padding: 18px;
-	text-align: center;
-	opacity: 0.95;
-	background-color: var(--accent1-color);
-	color: #fff;
 }
 
 div.hero article {
@@ -120,7 +158,7 @@ section.history {
 
 section.history h2 {
 	text-align: center;
-	float: center;
+	/* float: center; */
 }
 
 section.history div {
