--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -139,6 +139,7 @@ div.hero h1 {
 div.hero article {
 	position: absolute;
 	bottom: 30px;
+	color: var(--black);
 	background-color: var(--secondary-color);
 	font-size: 20px;
 	border: 1px solid var(--accent2-color);
@@ -181,7 +182,7 @@ footer {
 	text-align: center;
 
 	height: 70px;
-
+	color: var(--black);
 	background-color: var(--moonstone);
 	
 	/* display: grid;
