--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -135,12 +135,19 @@ form.message-form {
 	margin-top: 50px;
 	background-color: var(--isabelline);
 	border-radius: 20px;
-	border: 2px solid var(--accent1-color)
+	border: 2px solid var(--accent1-color);
+	text-align: center;
 }
 
 form.message-form * {
 	padding: 5px;
 	margin: 5px;
+}
+
+input.radio-input {
+	--size:15px;
+	width: var(--size);
+	height: var(--size);
 }
 
 form.message-form label, form.message-form input {
@@ -151,19 +158,13 @@ form.message-form button {
 	background-color: var(--accent1-color);
 	color: white;
 	border-radius: 5px;
+	font-size: 17px;
 }
 
 form.message-form div {
 	display: flex;
 	align-items: center;
-}
-
-form.message-form div span label {
-	display: inline;
-}
-
-form.message-form div span input {
-	display: inline;
+	justify-content: center;
 }
 
 div.hero {
