--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -190,8 +190,9 @@ div.hero article {
 	color: var(--black);
 	background-color: var(--secondary-color);
 	font-size: 20px;
+	opacity: 0.95;
 	border: 1px solid var(--accent2-color);
-	border-radius: 5px;
+	border-radius: 7.5px;
 	box-shadow: 5px 5px 10px var(--accent2-color);
 	display: flex;
 	align-items: center;
